--- a/config/manyFEWSdocker.yml
+++ b/config/manyFEWSdocker.yml
@@ -16,12 +16,8 @@ dependencies:
   - twilio
   - pygrib
   - gdal
-  # dev dependencies
-  - black=22.3.0
-  - pre-commit
-  - pytest
-  - retrying
-  - selenium==4.4.0
+  - gunicorn
+  - retrying=1.3.3
   - pip:
     - django-geojson==3.2.0
     - django-environ
