Fix errors in production deployment config

--- a/production.yml
+++ b/production.yml
@@ -22,16 +22,16 @@ services:
       - "8080"
     restart: unless-stopped
     volumes:
-      - ./conf/traefik/acme.json:/acme.json
-      - ./conf/traefik/traefik.toml:/traefik.toml
-      - ./conf/traefik/conf/:/conf/:ro
+      - ./config/traefik/acme.json:/acme.json
+      - ./config/traefik/traefik.toml:/traefik.toml
+      - ./config/traefik/conf/:/conf/:ro
       - traefik:/tmp
     labels:
 # Uncomment to enable Traefik Dashboard on https://traefik.hostname/
 #      - "traefik.enable=true"
 #      - "traefik.http.routers.api.entryPoints=https"
-#      - "traefik.http.routers.api.rule=Host(`traefik.${HOSTNAME}`)"
-#      - "traefik.http.routers.api.service=api@internal"
+#      - "traefik.http.routers.api.rule=Host(`traefik.${DOMAIN}`)"
+#      - "traefik.http.routers.api.service=api@backend"
 #      - "traefik.http.routers.api.middlewares=auth"
 #      - "traefik.http.middlewares.auth.basicauth.users=admin:$$2y$$12$$6TYH11Sv7F3b55fceRXR0O7v7jEOu75a5Ltg4Ui1lF63qF5N8Eyey"
 #      - "traefik.http.routers.api.tls=true"
@@ -69,22 +69,26 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
 
- nginx:
-   labels:
-     - "traefik.enable=true"
-     - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_traefik"
-     - "traefik.http.routers.web-http.entrypoints=http"
-     - "traefik.http.routers.web-http.rule=Host(`${HOSTNAME}`)"
-     - "traefik.http.routers.web-http.middlewares=httpsRedirect@file"
-     - "traefik.http.routers.web.entrypoints=https"
-     - "traefik.http.routers.web.rule=Host(`${HOSTNAME}`)"
-     - "traefik.http.routers.web.tls=true"
-     - "traefik.http.routers.web.tls.certresolver=letsencrypt"
-     - "traefik.http.routers.web.middlewares=secured@file"
-     - "traefik.http.services.web.loadbalancer.server.port=80"
-     - "com.centurylink.watchtower.enable=true"
-   networks:
-     - internal
-     - traefik
+  nginx:
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_traefik"
+      - "traefik.http.routers.web-http.entrypoints=http"
+      - "traefik.http.routers.web-http.rule=Host(`${DOMAIN}`)"
+      - "traefik.http.routers.web-http.middlewares=httpsRedirect@file"
+      - "traefik.http.routers.web.entrypoints=https"
+      - "traefik.http.routers.web.rule=Host(`${DOMAIN}`)"
+      - "traefik.http.routers.web.tls=true"
+      - "traefik.http.routers.web.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.web.middlewares=secured@file"
+      - "traefik.http.services.web.loadbalancer.server.port=80"
+      - "com.centurylink.watchtower.enable=true"
+    networks:
+      - backend
+      - traefik
 
-  
+networks:
+  traefik: 
+
+volumes:
+  traefik:
