--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -1,11 +1,13 @@
 name: Build Docker Images
 on:
-  push:
-    branches:
-      - 'main'
+  workflow_run:
+    workflows: [test]
+    types:
+      - completed
 
 jobs:
   docker:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       -
