--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -5,6 +5,9 @@ on:
     types:
       - completed
 
+env:
+  DOCKERHUB_REPO: durhamarc/manyfews
+
 jobs:
   docker:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -41,7 +44,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           target: manyfews
-          tags: user/manyfews:platform-latest
+          tags: ${{ DOCKERHUB_REPO }}:platform-latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       -
@@ -52,7 +55,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           target: deploy
-          tags: user/manyfews:web-latest
+          tags: ${{ DOCKERHUB_REPO }}:web-latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
       -
