--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -1,7 +1,7 @@
 name: Build Docker Images
 on:
   workflow_run:
-    workflows: [test]
+    workflows: [Unit Tests]
     types:
       - completed
 
