--- a/.github/workflows/build_docker_images.yml
+++ b/.github/workflows/build_docker_images.yml
@@ -1,3 +1,4 @@
+# A Github Actions configuration for building Docker images for ManyFEWS
 name: Build Docker Images
 on:
   workflow_run:
@@ -16,9 +17,12 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
+
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+
+      # https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#github-cache
       -
         name: Cache Docker layers
         uses: actions/cache@v3
@@ -27,43 +31,55 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+
+      # https://stackoverflow.com/questions/59810838/how-to-get-the-short-sha-for-the-github-workflow
+      -
+        name: Add SHORT_SHA env property with commit short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
       -
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          target: manyfews
-          tags: ${{ env.DOCKERHUB_REPO }}:platform-latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          target: deploy
-          tags: ${{ env.DOCKERHUB_REPO }}:web-latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-      -
-        # Temp fix
-        # https://github.com/docker/build-push-action/issues/252
-        # https://github.com/moby/buildkit/issues/1896
-        name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
+      -
+        name: Build and push (gunicorn)
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          target: gunicorn
+          tags: ${{ env.DOCKERHUB_REPO }}-gunicorn:latest , ${{ env.DOCKERHUB_REPO }}-gunicorn:${{ env.SHORT_SHA }}
+          cache-from: type=gha,scope=${{ github.workflow }}
+          cache-to: type=gha,scope=${{ github.workflow }},mode=max
+
+      -
+        name: Build and push (celery)
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          target: celery
+          tags: ${{ env.DOCKERHUB_REPO }}-celery:latest , ${{ env.DOCKERHUB_REPO }}-celery:${{ env.SHORT_SHA }}
+          cache-from: type=gha,scope=${{ github.workflow }}
+          cache-to: type=gha,scope=${{ github.workflow }},mode=max
+
+      -
+        name: Build and push (nginx)
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          target: web
+          tags: ${{ env.DOCKERHUB_REPO }}-web:latest , ${{ env.DOCKERHUB_REPO }}-web:${{ env.SHORT_SHA }}
+          cache-from: type=gha,scope=${{ github.workflow }}
+          cache-to: type=gha,scope=${{ github.workflow }},mode=max
