Update subsite.conf to accept larger POST for model data upload

--- a/config/subsite.conf
+++ b/config/subsite.conf
@@ -73,4 +73,13 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+
+    # Set caching for resources
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        expires max;
+        log_not_found off;
+    }
+
+    server_tokens off;
+    client_max_body_size 1G;
 }
