Add django-celery-results to enable viewing of completed tasks from admin page

--- a/config/manyFEWSdocker.yml
+++ b/config/manyFEWSdocker.yml
@@ -12,6 +12,7 @@ dependencies:
   - django-leaflet
   - celery
   - django-celery-beat
+  - django-celery-results
   - django-crispy-forms
   - twilio
   - pygrib
