--- a/config/manyFEWSenv.yml
+++ b/config/manyFEWSenv.yml
@@ -12,6 +12,7 @@ dependencies:
   - django-leaflet
   - celery
   - django-celery-beat
+  - django-celery-results
   - django-crispy-forms
   - twilio
   - pygrib
