--- a/config/manyFEWSdocker.yml
+++ b/config/manyFEWSdocker.yml
@@ -11,6 +11,7 @@ dependencies:
   - django
   - django-leaflet
   - celery
+  - django-celery-beat
   - django-celery-results
   - django-crispy-forms
   - twilio
@@ -19,7 +20,6 @@ dependencies:
   - gunicorn
   - retrying=1.3.3
   - pip:
-    - django-celery-beat==2.3.0
     - django-geojson==3.2.0
     - django-environ
     - django-phonenumber-field[phonenumberslite]
