Locally bind data volume for postgres in docker-compose.yml [no ci]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,4 +122,8 @@ networks:
 
 volumes:
   postgresql:
+    driver_opts:
+      type: none
+      device: ${PWD}/volumes/postgres
+      o: bind
   uploads:
