--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,11 @@ stages:
     steps:
     - task: Docker@2
       displayName: Build an image
+      env:
+        DOCKER_BUILDKIT: 1
       inputs:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
-          $(tag)
+          $(tag)_gunicorn
+        arguments: '--target gunicorn'
