Squashed commit of Azure CI/CD development so far:
commit c3647ce6bbd6844baf0ed1cb291ba05cb4b46359
Author: Samantha Finnigan <samantha.finnigan@durham.ac.uk>
Date:   Tue Oct 11 14:57:07 2022 +0100

    Add Deploy stage to CI pipeline

commit db8161a5ab244ad7b4d1996287fecdacf1566d69
Author: Samantha Finnigan <samantha.finnigan@durham.ac.uk>
Date:   Tue Oct 11 14:12:44 2022 +0100

    Correct image references in docker save command

commit 84e4a2456053ee8f43a73cc3c7dbdbf8752d6795
Author: Samantha Finnigan <samantha.finnigan@durham.ac.uk>
Date:   Tue Oct 11 13:56:01 2022 +0100

    Add further steps for image builds and fix caching

commit 5a246d08813ac61ab28cffe39a1499c66df7cb5c
Author: Samantha Finnigan <samantha.finnigan@durham.ac.uk>
Date:   Tue Oct 11 13:44:29 2022 +0100

    Configure build caching for Docker in Azure Pipeline

commit a9621ffb0e0e6ec37168e7427a63e716cbe22691
Author: Samantha Finnigan <samantha.finnigan@durham.ac.uk>
Date:   Tue Oct 11 13:28:51 2022 +0100

    Try to fix "An image does not exist locally with the tag.." error

commit 8816f8b2aa00baec161a8533873065ccbaad598e
Author: Samantha Finnigan <samantha.finnigan@durham.ac.uk>
Date:   Tue Oct 11 12:15:24 2022 +0100

    Separate Build and Push stages again as the combined stage cannot take arguments

commit 73d210779f333aca62892a9405591bf1785f0b2d
Author: Samantha Finnigan <samantha.finnigan@durham.ac.uk>
Date:   Tue Oct 11 12:09:58 2022 +0100

    Fix "Stage [...] has an invalid name" error in Azure DevOps

commit 64acf6436a5fadc2c1542dc7ab4962f37d5ced75
Author: Samantha Finnigan <samantha.finnigan@durham.ac.uk>
Date:   Tue Oct 11 12:06:40 2022 +0100

    Modify Azure pipeline to build and push image to DurhamARC DockerHub

commit 83490197ce220e0fe0538e97854e3c1b1de9308d
Author: Samantha Finnigan <samantha.finnigan@durham.ac.uk>
Date:   Tue Oct 11 12:02:57 2022 +0100

    Move apk add up in build_node in Dockerfile in the hopes of caching it more often

commit f7568e4dfdfc8676ac7f4ac184eb7ac6

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,180 @@
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
+#
+# Durham ARC Azure Pipeline for ManyFEWS Docker images
+#
 trigger:
 - main
 
 resources:
 - repo: self
 
+# Configure variables used by the build stages
 variables:
-  tag: '$(Build.BuildId)'
+  tag: 'azure-$(Build.BuildId)'
+  dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+  dockerRegistryServiceConnection: 'DurhamARCDockerHub'
+  imageRepository: 'durhamarc/manyfews'
+  azureSubscriptionEndpoint: 'svc-con-awh'
 
 stages:
 - stage: Build
   displayName: Build image
   jobs:
-  - job: Build
-    displayName: Build
+  -
+    job: BuildAndPush
+    displayName: Build and Push ManyFEWS docker images
     pool:
       vmImage: ubuntu-latest
     steps:
-    - task: Docker@2
-      displayName: Build an image
+
+    #
+    # Log in to DockerHub:
+    -
+      task: Docker@2
+      displayName: Login to DockerHub
+      inputs:
+        command: login
+        containerRegistry: '$(dockerRegistryServiceConnection)'
+
+    #
+    # Set up the cache for building Docker containers
+    # See: https://learn.microsoft.com/en-us/azure/devops/pipelines/release/caching?view=azure-devops#docker-images
+    -
+      task: Cache@2
+      displayName: Prepare Cache for Docker
+      inputs:
+        key: 'docker | "$(Agent.OS)" | cache'
+        path: $(Pipeline.Workspace)/docker
+        # Variable cacheHitVar will be set to 'true' when the cache is restored:
+        cacheHitVar: CACHE_RESTORED
+
+    -
+      script: |
+        docker load -i $(Pipeline.Workspace)/docker/cache.tar
+      displayName: Docker restore
+      condition: and(not(canceled()), eq(variables.CACHE_RESTORED, 'true'))
+
+    #
+    # Build the Docker image for the Gunicorn container
+    # This needs to be done in two steps as we cannot pass arguments
+    # into the Docker task with command 'buildAndPush'.
+    -
+      task: Docker@2
+      displayName: Build Gunicorn python image
+      env:
+        DOCKER_BUILDKIT: 1
       inputs:
         command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        arguments: '--target gunicorn'
+        containerRegistry: $(dockerRegistryServiceConnection)
+        repository: $(imageRepository)-gunicorn
+        dockerfile: $(dockerfile)
         tags: |
-          $(tag)
+          latest,azure-latest,$(tag)
+
+    #
+    # Push the Gunicorn image to DockerHub
+    -
+      task: Docker@2
+      displayName: Push Gunicorn python image
+      inputs:
+        command: push
+        repository: $(imageRepository)-gunicorn
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          latest,azure-latest,$(tag)
+
+    #
+    # Now do the same for the Celery container:
+    # Build the celery python image:
+    -
+      task: Docker@2
+      displayName: Build Celery python image
+      env:
+        DOCKER_BUILDKIT: 1
+      inputs:
+        command: build
+        arguments: '--target celery'
+        containerRegistry: $(dockerRegistryServiceConnection)
+        repository: $(imageRepository)-celery
+        dockerfile: $(dockerfile)
+        tags: |
+          latest,azure-latest,$(tag)
+
+    #
+    # Push the Celery image to DockerHub
+    -
+      task: Docker@2
+      displayName: Push Celery python image
+      inputs:
+        command: push
+        repository: $(imageRepository)-celery
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          latest,azure-latest,$(tag)
+
+    #
+    # And finally, for the web container:
+    # Build the web python image:
+    -
+      task: Docker@2
+      displayName: Build Web/Nginx python image
+      env:
+        DOCKER_BUILDKIT: 1
+      inputs:
+        command: build
+        arguments: '--target web'
+        containerRegistry: $(dockerRegistryServiceConnection)
+        repository: $(imageRepository)-web
+        dockerfile: $(dockerfile)
+        tags: |
+          latest,azure-latest,$(tag)
+
+    #
+    # Push the Celery image to DockerHub
+    -
+      task: Docker@2
+      displayName: Push Web/Nginx python image
+      inputs:
+        command: push
+        repository: $(imageRepository)-web
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          latest,azure-latest,$(tag)
+
+    #
+    # Save Cache for Docker images
+    -
+      script: |
+        mkdir -p $(Pipeline.Workspace)/docker
+        docker save -o $(Pipeline.Workspace)/docker/cache.tar \
+          $(imageRepository)-web:$(tag) \
+          $(imageRepository)-gunicorn:$(tag) \
+          $(imageRepository)-celery:$(tag)
+      displayName: Docker save
+      condition: and(not(canceled()), or(failed(), ne(variables.CACHE_RESTORED, 'true')))
+
+
+- stage: Deploy
+  displayName: Deploy stack to App Service environment
+  # Deploy to Azure App service environment with Docker Compose
+  jobs:
+  - job: Deploy
+    displayName: Deploy stack using docker-compose
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+
+    -
+      task: DockerCompose@0
+      displayName: Deploy ManyFEWS services on Azure ASE Endpoint
+      inputs:
+        action: Run services
+        containerregistrytype: Container Registry
+        azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
+        dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+        dockerComposeFile: docker-compose.azure.yml
+        projectName: $(Build.Repository.Name)
+        qualifyImageNames: true
+        buildImages: false
+        abortOnContainerExit: true
+        detached: false
