--- a/docker-compose.azure.yml
+++ b/docker-compose.azure.yml
@@ -8,8 +8,8 @@ services:
     container_name: ${COMPOSE_PROJECT_NAME}_rabbitmq
     restart: always
     environment:
-      RABBITMQ_DEFAULT_USER: manyfews
-      RABBITMQ_DEFAULT_PASS: ${rabbitmq_password}
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
     ports:
        - "5672:5672" # AMQP, no TLS
     networks:
