Set azure-pipelines.yml to only build when pushing to the 'release' branch

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,9 @@
 # Durham ARC Azure Pipeline for ManyFEWS Docker images
 #
 trigger:
-- main
+  branches:
+    include:
+    - release
 
 resources:
 - repo: self
