Set Azure pipeline dockerComposeCommand to 'up -d'

--- a/.github/workflows/azure-pipelines.yml
+++ b/.github/workflows/azure-pipelines.yml
@@ -221,6 +221,7 @@ stages:
         azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
         dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
         dockerComposeFile: .github/pipelines/docker-compose.azure.yml
+        dockerComposeCommand: 'up -d'
         projectName: $(Build.Repository.Name)
         qualifyImageNames: true
         buildImages: false
