Update environment variables for CI to match 7e55238

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -1,20 +1,32 @@
-zentra_un=zentraCloudUserName
-zentra_pw=zentraCloudPassword
-latValue=-80.5
-lonValue=175
-initial_backTime=5
-station_SN=06-02047
-gefs_forecastDays=2
-model_timestep=0.25
-map_url=https://tiles.stadiamaps.com/tiles/osm_bright/{z}/{x}/{y}{r}.png
-email_host=smtp.gmail.com
-email_port=465
-email_host_user=emailAddressOrUserName
-email_host_password=emailAccountPassword
-email_use_ssl=True
-twilio_account_sid=twilioAccontSID
-twilio_auth_token=twilioAuthToken
-twilio_phone_number=twilioPhoneNumber
-twilio_verification_sid=twilioVerificationServiceId
-allowed_hosts=127.0.0.1
-debug=True
+# Zentra Data logging credentials
+ZENTRA_UN=zentraCloudUserName
+ZENTRA_PW=zentraCloudPassword
+
+# Model values
+LAT_VALUE=-80.5
+LON_VALUE=175
+INITIAL_BACKTIME=5
+STATION_SN=06-02047
+GEFS_FORECAST_DAYS=2
+MODEL_TIMESTEP=0.25
+
+# Stadia Maps URL. Add API key to end of query as ?api_key=<...>
+MAP_URL=https://tiles.stadiamaps.com/tiles/osm_bright/{z}/{x}/{y}{r}.png
+
+# When using Gmail, create password via https://myaccount.google.com/apppasswords
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=465
+EMAIL_HOST_USER=emailAddressOrUserName
+EMAIL_HOST_PASSWORD=emailAccountPassword
+EMAIL_USE_SSL=True
+
+# https://console.twilio.com/
+TWILIO_ACCOUNT_SID=twilioAccontSID
+TWILIO_AUTH_TOKEN=twilioAuthToken
+TWILIO_PHONE_NUMBER=twilioPhoneNumber
+TWILIO_VERIFICATION_SID=twilioVerificationServiceId
+
+# Other
+ALLOWED_HOSTS=127.0.0.1
+DEBUG=True
+
