Add postgres variables to .env.CI

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -26,6 +26,13 @@ TWILIO_AUTH_TOKEN=twilioAuthToken
 TWILIO_PHONE_NUMBER=twilioPhoneNumber
 TWILIO_VERIFICATION_SID=twilioVerificationServiceId
 
+# Postgres database credentials
+DB_NAME=manyfews
+DB_USER=manyfews
+DB_PASSWORD=ibn2CLbHPv8BFwfVg25b
+DB_HOST=postgres
+DB_PORT=5432
+
 # Other
 ALLOWED_HOSTS=127.0.0.1
 DEBUG=True
