Correct hostname in .env.CI

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -30,7 +30,7 @@ TWILIO_VERIFICATION_SID=twilioVerificationServiceId
 DB_NAME=manyfews
 DB_USER=manyfews
 DB_PASSWORD=ibn2CLbHPv8BFwfVg25b
-DB_HOST=postgres
+DB_HOST=localhost
 DB_PORT=5432
 
 # Other
