Alter CI credentials

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -29,11 +29,12 @@ TWILIO_VERIFICATION_SID=twilioVerificationServiceId
 # Postgres database credentials
 DB_NAME=manyfews
 DB_USER=manyfews
-DB_PASSWORD=ibn2CLbHPv8BFwfVg25b
+DB_PASSWORD=manyfews
 DB_HOST=localhost
 DB_PORT=5432
 
-# Other
-ALLOWED_HOSTS=127.0.0.1
+# Other: Set these variables if accessing on a host:port other than localhost:80
+#ALLOWED_HOSTS=127.0.0.1,localhost,localhost:8080,127.0.0.1:8080
+#CSRF_TRUSTED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
 DEBUG=True
 
