Add postgis to Azure deployment for minimum required feature set while testing

--- a/.github/azure/docker-compose.azure.yml
+++ b/.github/azure/docker-compose.azure.yml
@@ -84,6 +84,15 @@ services:
       - backend
       - default
 
+  # Postgres container
+  postgres:
+    image: postgis/postgis:14-3.2
+    environment:
+      POSTGRES_DBNAME: ${DB_NAME}
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    ports:
 
 # Define networks and volumes
 networks:
