Include RabbitMQ config in .env.CI

--- a/manyfews/manyfews/.env.CI
+++ b/manyfews/manyfews/.env.CI
@@ -33,6 +33,12 @@ DB_PASSWORD=manyfews
 DB_HOST=localhost
 DB_PORT=5432
 
+# RabbitMQ
+RABBITMQ_DEFAULT_USER=manyfews
+RABBITMQ_DEFAULT_PASS=manyfews
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=4369
+
 # Other: Set these variables if accessing on a host:port other than localhost:80
 #ALLOWED_HOSTS=127.0.0.1,localhost,localhost:8080,127.0.0.1:8080
 #CSRF_TRUSTED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
