--- a/.github/azure/azure-pipelines.yml
+++ b/.github/azure/azure-pipelines.yml
@@ -25,7 +25,14 @@ variables:
 - name: imageRepository
   value: 'durhamarc/manyfews'
 - name: azureSubscriptionEndpoint
-  value: 'svc-con-awh'
+  value: 'svc-con-awh-01'
+
+- name: containerRegistryName
+  value: 'https://index.docker.io/v1/'
+- name: webAppResourceGroupName
+  value: 'du-uks-awh-floodwarnings-01'
+- name: webAppName
+  value: 'duuksawhfloodwarnings01'
 
 
 stages:
@@ -244,10 +251,10 @@ stages:
     -
       task: AzureWebAppContainer@1
       inputs:
-        azureSubscription: 'svc-con-awh-01'
-        appName: 'duuksawhfloodwarnings01'
+        azureSubscription: $(connectedServiceName)
+        appName: $(webAppName)
         deployToSlotOrASE: true
-        resourceGroupName: 'du-uks-awh-floodwarnings-01'
+        resourceGroupName: $(webAppResourceGroupName)
         slotName: 'production'
         containers: |
           registry.hub.docker.com/durhamarc/manyfews-gunicorn:azure-latest
@@ -285,3 +292,43 @@ stages:
           -RABBITMQ_PORT "$(RABBITMQ_PORT)"
           -ALLOWED_HOSTS "$(ALLOWED_HOSTS)"
           -CSRF_TRUSTED_ORIGINS "$(CSRF_TRUSTED_ORIGINS)"
+
+
+- stage: Release
+  displayName: Release
+  jobs:
+  - job: Build
+    displayName: Release
+    pool:
+      name: Default
+    steps:
+      -
+        script: |
+          echo  '$(System.DefaultWorkingDirectory)'
+        displayName: Default Working Directory
+
+      # Azure App Service deploy v4
+      # Deploy app to Azure App Service using Docker
+      -
+        task: AzureRmWebAppDeployment@4
+        inputs:
+          ConnectionType: 'AzureRM'                         # 'AzureRM' | 'PublishProfile'. Required. Connection type. Default: AzureRM.
+          azureSubscription: $(azureSubscriptionEndpoint)   # string. Required when ConnectionType = AzureRM. Azure subscription.
+          appType: 'webAppContainer'                        # 'webApp' | 'webAppLinux' | 'webAppContainer' | 'functionApp' | 'functionAppLinux' | 'functionAppContainer' | 'apiApp' | 'mobileApp'. Required when ConnectionType = AzureRM. App Service type. Default: webApp.
+          WebAppName: $(webAppName)                         # string. Required when ConnectionType = AzureRM. App Service name.
+          deployToSlotOrASE: true                           # boolean. Optional. Use when ConnectionType = AzureRM && WebAppKind != "". Deploy to Slot or App Service Environment. Default: false.
+          ResourceGroupName: $(webAppResourceGroupName)     # string. Required when DeployToSlotOrASEFlag = true. Resource group.
+          SlotName: 'production'                            # string. Required when DeployToSlotOrASEFlag = true. Slot. Default: production.
+          DockerNamespace: $(containerRegistryName)         # string. Required when WebAppKind = webAppContainer || WebAppkind = functionAppContainer. Registry or Namespace.
+          DockerRepository: $(imageRepository)-web          # string. Required when WebAppKind = webAppContainer || WebAppkind = functionAppContainer. Image.
+          DockerImageTag: $(tag)                            # string. Optional. Use when WebAppKind = webAppContainer || WebAppkind = functionAppContainer. Tag.
+          StartupCommand:                                   # string. Optional. Use when WebAppKind = webAppLinux || WebAppKind = webAppContainer || WebAppkind = functionAppContainer || WebAppKind = functionAppLinux. Startup command.
+          # Application and Configuration Settings
+#          AppSettings:                                      # string. App settings.
+#          ConfigurationSettings:                            # string. Configuration settings.
+      -
+        task: AzureAppServiceManage@0
+        inputs:
+          azureSubscription: $(connectedServiceName)
+          Action: 'Restart Azure App Service'
+          WebAppName: $(webAppName)
