Correct variable error in azure-pipelines.yml

--- a/.github/azure/azure-pipelines.yml
+++ b/.github/azure/azure-pipelines.yml
@@ -329,6 +329,6 @@ stages:
       -
         task: AzureAppServiceManage@0
         inputs:
-          azureSubscription: $(connectedServiceName)
+          azureSubscription: $(azureSubscriptionEndpoint)
           Action: 'Restart Azure App Service'
           WebAppName: $(webAppName)
