--- a/.github/azure/azure-pipelines.yml
+++ b/.github/azure/azure-pipelines.yml
@@ -28,7 +28,7 @@ variables:
   value: 'svc-con-awh-01'
 
 - name: containerRegistryName
-  value: 'https://index.docker.io/v1/'
+  value: 'https://index.docker.io/v1'
 - name: webAppResourceGroupName
   value: 'du-uks-awh-floodwarnings-01'
 - name: webAppName
@@ -174,68 +174,68 @@ stages:
       condition: and(not(canceled()), or(failed(), ne(variables.CACHE_RESTORED, 'true')))
 
 
-    -
-      task: DockerCompose@0
-      displayName: Run docker-compose to check config is correct
-      env:
-        COMPOSE_PROJECT_NAME: $(COMPOSE_PROJECT_NAME)
-
-        # Zentra acccount credentials
-        ZENTRA_UN: $(ZENTRA_UN)
-        ZENTRA_PW: $(ZENTRA_PW)
-
-        MAP_URL: $(MAP_URL)
-        SITE_URL: $(SITE_URL)
-
-        # Postgres database credentials
-        DB_NAME: $(DB_NAME)
-        DB_USER: $(DB_USER)
-        DB_PASSWORD: $(DB_PASSWORD)
-        DB_HOST: $(DB_HOST)
-        DB_PORT: $(DB_PORT)
-
-        # External mailer credentials
-        EMAIL_HOST: $(EMAIL_HOST)
-        EMAIL_PORT: $(EMAIL_PORT)
-        EMAIL_HOST_USER: $(EMAIL_HOST_USER)
-        EMAIL_HOST_PASSWORD: $(EMAIL_HOST_PASSWORD)
-
-        # Twilio account credentials:
-        # see https://console.twilio.com/
-        TWILIO_ACCOUNT_SID: $(TWILIO_ACCOUNT_SID)
-        TWILIO_AUTH_TOKEN: $(TWILIO_AUTH_TOKEN)
-        TWILIO_PHONE_NUMBER: $(TWILIO_PHONE_NUMBER)
-        TWILIO_VERIFICATION_SID: $(TWILIO_VERIFICATION_SID)
-
-        # Model values
-        LAT_VALUE: $(LAT_VALUE)
-        LON_VALUE: $(LON_VALUE)
-        INITIAL_BACKTIME: $(INITIAL_BACKTIME)
-        STATION_SN: $(STATION_SN)
-        GEFS_FORECAST_DAYS: $(GEFS_FORECAST_DAYS)
-
-        # Celery broker connection details
-        RABBITMQ_DEFAULT_USER: $(RABBITMQ_DEFAULT_USER)
-        RABBITMQ_DEFAULT_PASS: $(RABBITMQ_DEFAULT_PASS)
-        RABBITMQ_HOST: $(RABBITMQ_HOST)
-        RABBITMQ_PORT: $(RABBITMQ_PORT)
-
-        # Django deployment settings
-        ALLOWED_HOSTS: $(ALLOWED_HOSTS)
-        CSRF_TRUSTED_ORIGINS: $(CSRF_TRUSTED_ORIGINS)
-
-      inputs:
-        action: Run services
-        containerregistrytype: Container Registry
-        azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
-        dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
-        dockerComposeFile: .github/azure/docker-compose.azure.yml
-        dockerComposeCommand: 'up -d'
-        projectName: $(Build.Repository.Name)
-        qualifyImageNames: true
-        buildImages: false
-        abortOnContainerExit: true
-        detached: false
+#    -
+#      task: DockerCompose@0
+#      displayName: Run docker-compose to check config is correct
+#      env:
+#        COMPOSE_PROJECT_NAME: $(COMPOSE_PROJECT_NAME)
+#
+#        # Zentra acccount credentials
+#        ZENTRA_UN: $(ZENTRA_UN)
+#        ZENTRA_PW: $(ZENTRA_PW)
+#
+#        MAP_URL: $(MAP_URL)
+#        SITE_URL: $(SITE_URL)
+#
+#        # Postgres database credentials
+#        DB_NAME: $(DB_NAME)
+#        DB_USER: $(DB_USER)
+#        DB_PASSWORD: $(DB_PASSWORD)
+#        DB_HOST: $(DB_HOST)
+#        DB_PORT: $(DB_PORT)
+#
+#        # External mailer credentials
+#        EMAIL_HOST: $(EMAIL_HOST)
+#        EMAIL_PORT: $(EMAIL_PORT)
+#        EMAIL_HOST_USER: $(EMAIL_HOST_USER)
+#        EMAIL_HOST_PASSWORD: $(EMAIL_HOST_PASSWORD)
+#
+#        # Twilio account credentials:
+#        # see https://console.twilio.com/
+#        TWILIO_ACCOUNT_SID: $(TWILIO_ACCOUNT_SID)
+#        TWILIO_AUTH_TOKEN: $(TWILIO_AUTH_TOKEN)
+#        TWILIO_PHONE_NUMBER: $(TWILIO_PHONE_NUMBER)
+#        TWILIO_VERIFICATION_SID: $(TWILIO_VERIFICATION_SID)
+#
+#        # Model values
+#        LAT_VALUE: $(LAT_VALUE)
+#        LON_VALUE: $(LON_VALUE)
+#        INITIAL_BACKTIME: $(INITIAL_BACKTIME)
+#        STATION_SN: $(STATION_SN)
+#        GEFS_FORECAST_DAYS: $(GEFS_FORECAST_DAYS)
+#
+#        # Celery broker connection details
+#        RABBITMQ_DEFAULT_USER: $(RABBITMQ_DEFAULT_USER)
+#        RABBITMQ_DEFAULT_PASS: $(RABBITMQ_DEFAULT_PASS)
+#        RABBITMQ_HOST: $(RABBITMQ_HOST)
+#        RABBITMQ_PORT: $(RABBITMQ_PORT)
+#
+#        # Django deployment settings
+#        ALLOWED_HOSTS: $(ALLOWED_HOSTS)
+#        CSRF_TRUSTED_ORIGINS: $(CSRF_TRUSTED_ORIGINS)
+#
+#      inputs:
+#        action: Run services
+#        containerregistrytype: Container Registry
+#        azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
+#        dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+#        dockerComposeFile: .github/azure/docker-compose.azure.yml
+#        dockerComposeCommand: 'up -d'
+#        projectName: $(Build.Repository.Name)
+#        qualifyImageNames: true
+#        buildImages: false
+#        abortOnContainerExit: true
+#        detached: false
 
 
 - stage: Deploy
@@ -251,6 +251,33 @@ stages:
         script: |
           echo  '$(System.DefaultWorkingDirectory)'
         displayName: Default Working Directory
+
+      -
+        task: AzureAppServiceSettings@1
+        displayName: Azure App Service Settings
+        inputs:
+          azureSubscription: $(azureSubscriptionEndpoint)
+          appName: $(webAppName)
+          # To deploy the settings on a slot, provide slot name as below.
+          # By default, the settings would be applied to the actual Web App (Production slot)
+          # slotName: staging
+          appSettings: |
+            [{
+              "name": "DOCKER_REGISTRY_SERVER_URL",
+              "value": "$(containerRegistryName)",
+              "slotSetting": false
+            },
+            {
+              "name": "DOCKER_REGISTRY_SERVER_USERNAME",
+              "value": "$(DOCKER_REGISTRY_SERVER_USERNAME)",
+              "slotSetting": false
+            },
+            {
+              "name": "DOCKER_REGISTRY_SERVER_PASSWORD",
+              "value": "$(DOCKER_REGISTRY_SERVER_PASSWORD)",
+              "slotSetting": false
+            }]
+
 
       # Azure App Service deploy v4
       # Deploy app to Azure App Service using Docker
